[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "hpo3"
description = "A drop-in replacement for PyHPO using a Rust backend for faster performance"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = {text = "MIT"}
authors = [{name = "Jonas Marcello", email = "jonas.marcello@esbme.com"}]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/anergictcell/hpo3"
repository = "https://github.com/anergictcell/hpo3"
"Bug Tracker" = "https://github.com/anergictcell/hpo3/issues"

[tool.maturin]
include = ["ontology.hpo"]